Fixed usages of deprecated Integer constructor in test code
Components modified:
* camel-aws2-sqs
* camel-aws-cw
* camel-aws-sqs
* camel-cometd
* camel-digitalocean
* camel-elsql
* camel-exec
* camel-quartz
* camel-resteasy
* camel-sql
* camel-syslog
* camel-thrift
* camel-twitter